# AUG

./: .gitignore  .~lock.实验课-仿真部分.docx#  README.md  实验课-仿真部分.docx
ros2_ws/: frames_2026-04-09_16.43.52.gv  frames_2026-04-09_16.44.09.gv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/screenshots/: ugv1_变电站-变压器1_20260416_095136.ppm  ugv1_变电站-变压器1_20260418_071227.ppm  ugv1_变电站-变压器1_20260419_105521.ppm  ugv1_变电站-变压器2_20260416_095215.ppm  ugv1_变电站-变压器2_20260418_071306.ppm  ugv1_变电站-变压器2_20260419_105602.ppm  ugv1_变电站-变压器3_20260416_095253.ppm  ugv1_变电站-变压器3_20260418_071344.ppm  ugv1_变电站-变压器3_20260419_105642.ppm  ugv1_变电站-变压器4_20260416_095057.ppm  ugv1_变电站-变压器4_20260418_065113.ppm  ugv1_变电站-变压器4_20260418_071150.ppm  ugv1_变电站-变压器4_20260419_105441.ppm  ugv2_电线杆1_20260416_095033.ppm  ugv2_电线杆1_20260418_065031.ppm  ugv2_电线杆1_20260418_071128.ppm  ugv2_电线杆1_20260419_105427.ppm  (+17 more)
ros2_ws/src/substation_nav_demo/: CMakeLists.txt  README.md  README_双车实验.md  package.xml
ros2_ws/src/substation_nav_demo/config/: ekf_2d.yaml  multi_nav_demo.rviz  multi_ugv_waypoints.yaml  nav2_narrow_road_params.yaml  nav2_narrow_road_params_ugv1.yaml  nav2_narrow_road_params_ugv2.yaml  nav_demo.rviz
ros2_ws/src/substation_nav_demo/launch/: autonomy_obstacle_demo.launch.py  multi_ugv_patrol.launch.py
ros2_ws/src/substation_nav_demo/models/goal_marker/: model.config  model.sdf
ros2_ws/src/substation_nav_demo/models/start_marker/: model.config  model.sdf
ros2_ws/src/substation_nav_demo/models/temporary_box/: model.config  model.sdf
ros2_ws/src/substation_nav_demo/scripts/: auto_goal_sender.py  goal_marker_publisher.py  multi_ugv_initial_pose_publisher.py  multi_ugv_patrol_controller.py  multi_ugv_route_marker_publisher.py  odom_tf_republisher.py  spawn_obstacle_ahead.py
ros2_ws/src/substation_sim/: CMakeLists.txt  SLAM_使用说明.md  package.xml
ros2_ws/src/substation_sim/config/: nav2_params.yaml  obstacles.csv
ros2_ws/src/substation_sim/maps/: substation_edited.yaml  substation_global.pgm  substation_global.yaml  substation_origin.yaml  substation_white.yaml
ros2_ws/src/substation_sim/models/insulator_row/: model.sdf
ros2_ws/src/substation_sim/models/main_building/: model.config  model.sdf
ros2_ws/src/substation_sim/models/power_tower/: model.sdf
ros2_ws/src/substation_sim/models/transformer/: model.config  model.sdf
ros2_ws/src/substation_sim/scripts/: inspection_node.py
ros2_ws/src/substation_sim/worlds/: substation.world
(+54 files in other folders)
